whitespace fixes

--- a/themes/custom/nerdtheme/css/styles.css
+++ b/themes/custom/nerdtheme/css/styles.css
@@ -19,7 +19,8 @@ body .field__label {
 }
 
 .main-nav--patreon-inner {
-  max-width:800px; margin: 0 auto;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .main-nav--patreon-link {
